0.0.5
Added build for qt5, (use USEQTVERSION=5 ./autogen.sh --prefix=/usr ).
Done preview ( uses xterm ).
Added clear.
Added italic/undeline.
Added bold.
Code clean.
Done close tab.
Fixed saveing/restoreing window position/size.
Redone save file.
Fixed emphasised text ending/starting in spaces
Fixed export emphasised text embeded in string.
Save last load folder.
Save last save folder.
Basic export of manpag.
Basic import of manpage.

0.0.0-0.0.4
Internal.