@@ -1,0 +1,31 @@
+#
+#
+AC_INIT([ManPageEditorQT],[0.0.5],[PROJ],[ManPageEditorQT])
+
+AC_CONFIG_HEADERS([config.h])
+AC_PROG_CXX
+AC_PROG_CC
+AM_INIT_AUTOMAKE
+
+AC_SUBST(CFLAGS)
+AC_SUBST(CPPFLAGS)
+AC_SUBST(LDFLAGS)
+
+CXXFLAGS=-Wall
+AC_SUBST(CXXFLAGS)
+
+CFLAGS=-Wall
+AC_SUBST(CFLAGS)
+
+QT_MODULES="Qt5Gui >= 5.15.0"
+PKG_CHECK_MODULES(QT, $QT_MODULES)
+AC_SUBST(QT_CFLAGS)
+AC_SUBST(QT_LIBS)
+
+QTWIDGETS_MODULES="Qt5Widgets >= 5.15.0"
+PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)
+AC_SUBST(QTWIDGETS_CFLAGS)
+AC_SUBST(QTWIDGETS_LIBS)
+
+AC_CONFIG_FILES(Makefile ManPageEditorQT/app/Makefile)
+AC_OUTPUT
